// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mixin-rtl transforms rtl mixins correctly 1`] = `
"
[dir="rtl"] .demo {
    margin-right: 1rem
}
  :root:not([dir="rtl"]) .demo {
    margin-left: 1rem
}
"
`;

exports[`mixin-rtl transforms where-rtl mixins correctly 1`] = `
"
:where([dir="rtl"]) .demo {
    margin-right: 1rem
}
  :where([dir="ltr"]) .demo {
    margin-left: 1rem
}
"
`;
